devel
-----

* Remove logging startup options `--log.api-enabled` and `--log.keep-logrotate` 
  for all client tools (arangosh, arangodump, arangorestore etc.), as these 
  options are only meaningful for arangod.

* Fixed BTS-284: upgrading from 3.6 to 3.7 in cluster enviroment.
  Moved upgrade ArangoSearch links task to later step as it needs cluster
  connection. Removed misleading error log records for failed ArangoSearch index
  creation during upgrade phase.

* Extend the "move-calculations-up" optimizer rule so that it can move
  calculations out of subqueries into the outer query.

* Don't allocate ahead-of-time memory for striped PRNG array in arangod,
  but instead use thread-local PRNG instances. Not only does this save a
  few megabytes or memory, but it also avoids potential (but unlikely)
  sharing of the same PRNG instance by multiple threads.

* Remove undocumented CMake variable `USE_BACKTRACE`, and remove define
  `ARANGODB_ENABLE_BACKTRACE`. Both were turned off by default before, and
  when turned on allow to produce backtraces from within the executable in
  case debug symbols were available, working and the build was also compiled
  with `USE_MAINTAINER_MODE=On`. Some code in this context was obviously
  unreachable, so now it has all been removed.
  To log a backtrace from within arangod, it is now possible to call
  `CrashHandler::logBacktrace()`, which will log a backtrace of the calling
  thread to the arangod log. This is restricted to Linux builds only.

* Fix warnings about suggest-override which can break builds when warnings
  are treated as errors.

* Turn off option `--server.export-read-write-metrics` for now, until there
  is certainty about the runtime overhead it introduces.

* Fixed issue #12543: Unused Foxx service config can not be discarded.

* Fixed issue #12363: Foxx HTTP API upgrade/replace always enables
  development mode.

* Remove unsafe query option `inspectSimplePlans`. This option previously