@@ -20,6 +20,7 @@
 ///
 /// @author Lars Maier
 ////////////////////////////////////////////////////////////////////////////////
+
 #ifndef ARANGOD_CLUSTER_ASYNC_AGENCY_COMM_H
 #define ARANGOD_CLUSTER_ASYNC_AGENCY_COMM_H 1
 
@@ -37,6 +38,7 @@
 
 #include "Agency/PathComponent.h"
 #include "Basics/ResultT.h"
+#include "Basics/debugging.h"
 #include "Futures/Future.h"
 #include "Network/Methods.h"
 
@@ -52,20 +54,33 @@ struct AsyncAgencyCommResult {
 
   [[nodiscard]] bool fail() const { return !ok(); }
 
-  VPackSlice slice() const { return response->slice(); }
+  VPackSlice slice() const { 
+    TRI_ASSERT(response != nullptr);
+    return response->slice(); 
+  }
 
   std::shared_ptr<velocypack::Buffer<uint8_t>> copyPayload() const {
+    TRI_ASSERT(response != nullptr);
     return response->copyPayload();
   }
+
   std::shared_ptr<velocypack::Buffer<uint8_t>> stealPayload() const {
+    TRI_ASSERT(response != nullptr);
     return response->stealPayload();
   }
+
   std::string payloadAsString() const {
+    TRI_ASSERT(response != nullptr);
     return response->payloadAsString();
   }
-  std::size_t payloadSize() const { return response->payloadSize(); }
+
+  std::size_t payloadSize() const { 
+    TRI_ASSERT(response != nullptr);
+    return response->payloadSize(); 
+  }
 
   arangodb::fuerte::StatusCode statusCode() const {
+    TRI_ASSERT(response != nullptr);
     return response->statusCode();
   }
 
