@@ -415,12 +415,21 @@ RestAdminClusterHandler::FutureVoid RestAdminClusterHandler::tryDeleteServer(
                     resetResponse(rest::ResponseCode::OK);
                     return futures::makeFuture();
                   } else if (result.statusCode() == fuerte::StatusPreconditionFailed) {
+                    TRI_IF_FAILURE("removeServer::noRetry") {
+                      generateError(result.asResult());
+                      return futures::makeFuture();
+                    }
                     return retryTryDeleteServer(std::move(ctx));
                   }
                 }
                 generateError(result.asResult());
                 return futures::makeFuture();
               });
+        }
+                    
+        TRI_IF_FAILURE("removeServer::noRetry") {
+          generateError(Result(TRI_ERROR_HTTP_PRECONDITION_FAILED));
+          return futures::makeFuture();
         }
 
         return retryTryDeleteServer(std::move(ctx));
