@@ -47,8 +47,10 @@ ERROR_HTTP_FORBIDDEN,403,"forbidden","Will be raised when the operation is forbi
 ERROR_HTTP_NOT_FOUND,404,"not found","Will be raised when an URI is unknown."
 ERROR_HTTP_METHOD_NOT_ALLOWED,405,"method not supported","Will be raised when an unsupported HTTP method is used for an operation."
 ERROR_HTTP_NOT_ACCEPTABLE,406,"request not acceptable","Will be raised when an unsupported HTTP content type is used for an operation, or if a request is not acceptable for a leader or follower."
+ERROR_HTTP_CONFLICT,409,"conflict","Will be raised when a conflict occurs in an HTTP operation."
 ERROR_HTTP_PRECONDITION_FAILED,412,"precondition failed","Will be raised when a precondition for an HTTP request is not met."
 ERROR_HTTP_SERVER_ERROR,500,"internal server error","Will be raised when an internal server is encountered."
+ERROR_HTTP_NOT_IMPLEMENTED,501,"not implemented","Will be raised when an API is called this is not implemented in general, or not implemented for the current setup."
 ERROR_HTTP_SERVICE_UNAVAILABLE,503,"service unavailable","Will be raised when a service is temporarily unavailable."
 ERROR_HTTP_GATEWAY_TIMEOUT,504,"gateway timeout","Will be raised when a service contacted by ArangoDB does not respond in a timely manner."
 
